Changes
-------

2017-11-13

    * Submit data to remote Collect server (configurable in Settings)

2017-10-30

    * Fixed bug where images could disappear second time a record was loaded

2017-08-11

    * Added French translation
    * Fixed bug where surveys, with time attribute as key, crashed

2017-05-12

    * Added support for latest Collect Desktop version

2017-04-10

    * Fixed out-of-memory crashes with large records

2017-03-21

    * Added support for latest Collect Desktop version

2017-01-04

    * Fixed crash when some devices import survey from Google Drive

2016-12-07

    * Fixed crash when exceeding max entity count

2016-12-06

    * Fixed bug where relevance and validation status didn't get updated when nodes where added or removed


2016-11-22

    * Added support for latest Collect Desktop version

2016-10-13

    * Fixed bug where code qualifiers weren't included in exports.

2016-10-05

    * Fixed another bug where surveys couldn't be imported using the built-in file chooser.

2016-09-26

    * Fixed bug where surveys couldn't be imported using the built-in file chooser.

2016-09-23

    * Fixed bug where coordinates didn't get included in exports.

2016-09-15

    * Added confirmation dialog before records and entities are deleted
    * Prevented non-relevant attributes from being updated
    * Fixed bug that prevented surveys from being imported directly from Google Drive
    * Added timestamp to exported data files
    * Included option to exclude images from export
    * Included option to save exported data files in Downloads directory
    * Set title in action bar to current survey name
    * Updated "Smart next" so it jumps to the record list once at the end of a record
    * Added support for survey designs which restricts manual entry of GPS coordinates
    * Indicated if a node in the node list sidebar is an attribute or not by using bold text on non-attributes
    * Added support for Time attribute record keys