@@ -9,13 +9,33 @@
             android:id="@+id/node_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="?attr/standardPadding"/>
+            android:padding="?attr/standardPadding" />
 
     <TextView
             android:id="@+id/node_prompt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="?attr/standardPadding"/>
+
+    <LinearLayout
+        android:id="@+id/entity_validation_error_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="?attr/standardPadding"
+        android:visibility="invisible">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/red_circle"/>
+        <TextView
+            android:id="@+id/entity_validation_error_messages"
+            android:textColor="#FF0000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
